<?xml version="1.0"?>
<package format="3">
  <name>wit_ros_imu</name>
  <version>0.1.0</version>
  <description>The wit_ros_imu package</description>

  <maintainer email="kevin@wit-motion.com">kevin</maintainer>
  <license>BSD</license>
  <url type="website">http://www.wit-motion.cn</url>
  <url type="bugtracker">http://www.wit-motion.cn</url>
  <author email="kevin@wit-motion.com">kevin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>